--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.0.0",
     "@auth0/auth0-angular": "^2.2.0",
     "angular-tabler-icons": "^2.7.0",
+    "angularx-social-login": "^4.1.0",
     "apexcharts": "^3.35.3",
     "ng-apexcharts": "1.7.1",
     "rxjs": "~7.5.0",
