--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,6 +24,7 @@
     "angular-tabler-icons": "^2.7.0",
     "angularx-social-login": "^4.1.0",
     "apexcharts": "^3.35.3",
+    "bcrypt": "^5.1.0",
     "ng-apexcharts": "1.7.1",
     "rxjs": "~7.5.0",
     "sass": "^1.57.1",
