--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "my-c": "echo 'This is my other script.'"
   },
   "private": true,
   "dependencies": {
